# Bebop

./: .gitignore  ARCHITECTURE.md  BOARD.txt  README.md  setup.cfg
bebop/: __main__.py  bookmarks.py  browser.py  colors.py  command_line.py  config.py  external.py  fs.py  gemtext.py  help.py  history.py  identity.py  links.py  metalines.py  mime.py  mouse.py  navigation.py  page.py  page_pad.py  plugins.py  preferences.py  protocol.py  rendering.py  screen.py  textbox.py  tofu.py  welcome.py
bebop/browser/: browser.py  file.py  gemini.py
bebop/tests/: test_external.py  test_identity.py  test_metalines.py  test_mime.py  test_navigation.py  test_preferences.py  test_protocol.py  test_rendering.py
plugins/finger/: README.md  setup.cfg
plugins/gopher/: README.md  setup.cfg
plugins/gopher/bebop_gopher/: plugin.py
