[metadata]
name = bebop-browser
version = 0.3.0
description = Terminal browser for Gemini
long_description = file: README.md
license = GPLv3
author = dece
author-email = shgck@pistache.land
home-page = https://git.dece.space/Dece/Bebop
classifiers =
  Environment :: Console
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

[options]
packages = bebop, bebop.browser
python_requires = >= 3.7
setup_requires = setuptools >= 38.3.0

[options.entry_points]
console_scripts =
  bebop = bebop.__main__:main
