[metadata]
name = bebop-browser-finger
version = 0.1.0
description = Finger plugin for the Bebop terminal browser
long_description = file: README.md
license = GPLv3
author = dece
author-email = shgck@pistache.land
home-page = https://git.dece.space/Dece/Bebop
classifiers =
  Environment :: Console
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

[options]
packages = bebop_finger
python_requires = >= 3.7
setup_requires = setuptools >= 38.3.0
