[metadata]
name = bebop-browser-gopher
version = 0.1.1
description = Gopher plugin for the Bebop terminal browser
long_description = file: README.md
license = GPLv3
author = dece
author-email = shgck@pistache.land
home-page = https://git.dece.space/Dece/Bebop
classifiers =
  Environment :: Console
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

[options]
packages = bebop_gopher
python_requires = >= 3.7
setup_requires = setuptools >= 38.3.0

